# ptree2

./: .envrc  Cargo.toml  README.md  flake.nix
examples/: basic.rs  builder.rs  dirtree.rs  petgraph.rs  serde.rs
src/: builder.rs  graph.rs  item.rs  lib.rs  output.rs  print_config.rs  value.rs
tests/: config_file.rs
